--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
                     <meta charset="utf-8" emacsmode="-*- markdown -*">
-                            **CMSC848F Assignment 4**
+                            **Point Cloud Classification and Segmentation**
 
-**Name    : Shyamsundar Prabhakar Indra**
-
-**UID     : 119360842**
-
-**Dir. ID : shyampi**
-
-This page documents the results corresponding to Assignment 4 of CMSC848F - 3D Vision, Fall 2023, at the University of Maryland.
-
-The tasks can be found at https://github.com/848f-3DVision/assignment4
+The codes and steps to run them can be found here: https://github.com/Shyam-pi/Point-Cloud-Classification-and-Segmentation
 
 Classification Model
 ==============================================================
